almost final - cant get the footer to work properly

--- a/src/index.html
+++ b/src/index.html
@@ -19,31 +19,6 @@
     </script>
   </head>
   <body>
-    <div class="hero">
-      <div class="grid">
-        <div class="grid__item grid__item--desktop-1-5">
-          <h2 class="hero__title">
-            ХУДОЖНІЙ
-            <br>
-            МУЗЕЙ
-          </h2>
-          <div class="hero__button">
-            <div class="hero__button--item">
-              кивтки
-            </div>
-            <a href="#" class="hero__button--search">
-              >
-            </a>
-          </div>
-        </div>
-        <div class="grid__item grid__item--desktop-6-12">
-          <img
-            src="./images/background.png"
-            alt="backg"
-            class="hero__background">
-        </div>
-      </div>
-    </div>
     <header class="header header--desktop">
       <div class="container">
 
@@ -97,7 +72,31 @@
     </nav>
 
     <main>
-
+      <div class="hero">
+        <div class="grid">
+          <div class="grid__item grid__item--desktop-1-5">
+            <h2 class="hero__title">
+              ХУДОЖНІЙ
+              <br>
+              МУЗЕЙ
+            </h2>
+            <div class="hero__button">
+              <div class="hero__button--item">
+                кивтки
+              </div>
+              <a href="#" class="hero__button--search">
+                >
+              </a>
+            </div>
+          </div>
+          <div class="grid__item grid__item--desktop-6-12 hero__background--row">
+            <img
+              src="./images/background.png"
+              alt="backg"
+              class="hero__background">
+          </div>
+        </div>
+      </div>
 
       <section
         class="page__section
@@ -277,7 +276,10 @@
     </main>
     <footer class="footer" id="#footer">
       <div class="grid">
-        <div class="grid__item grid__item--1">
+        <div class="grid__item
+          grid__item--desktop-1-1
+          grid__item--1-12
+          footer__logo-container">
           <div class="footer__logo">
             <a href="#">
               <img
@@ -400,6 +402,8 @@
                 Виставки та події
               </a>
             </div>
+          </div>
+          <div class="footer__link-container">
             <div>
               <a href="#" class="footer__link">
                 Про Hac
@@ -412,133 +416,5 @@
         </div>
       </div>
     </footer>
-    <!--<div class="container grid">
-      <div
-        class="
-          footer
-          page__footer
-          page__section"
-        id="contacts">
-        <div class="footer__content grid">
-          <div class="footer__logo-wrapper grid__item--1-2">
-            <a href="#" class="footer__logo">
-              <img
-                src="./images/NA MU.png"
-                alt="logo"
-                class="footer__logo-pic"
-              >
-            </a>
-
-            <div class="footer__icon-wrapper">
-              <a
-                href="https://www.facebook.com/namu.museum/"
-                class="footer__icon"
-                target="_blank"
-              >
-                <img
-                  src="./images/Facebook.png"
-                  alt="Facebook" class="footer__icon-pic"
-                >
-              </a>
-
-              <a
-                href="https://www.instagram.com/namu.museum/"
-                class="footer__icon"
-                target="_blank"
-              >
-                <img
-                  src="./images/insta.png"
-                  alt="Instagram" class="footer__icon-pic"
-                >
-              </a>
-            </div>
-          </div>
-
-          <div class="footer__schedule-wrapper grid">
-            <div class="footer__schedule grid__item grid__item--3-4">
-              <h3 class="footer__schedule-title">Графік роботи</h3>
-              <div class="footer__schedule-content">
-                <div class="footer__schedule-slot">
-                  <div class="footer__schedule-time">12:00 — 20:00</div>
-                  <div class="footer__schedule-day">середа</div>
-                </div>
-                <div class="footer__schedule-slot">
-                  <div class="footer__schedule-time">12:00 — 20:00</div>
-                  <div class="footer__schedule-day">четвер</div>
-                </div>
-                <div class="footer__schedule-slot">
-                  <div class="footer__schedule-time">12:00 — 20:00</div>
-                  <div class="footer__schedule-day">пʼятниця</div>
-                </div>
-                <div class="footer__schedule-slot">
-                  <div class="footer__schedule-time">11:00 — 19:00</div>
-                  <div class="footer__schedule-day">субота</div>
-                </div>
-                <div class="footer__schedule-slot">
-                  <div class="footer__schedule-time">11:00 — 19:00</div>
-                  <div class="footer__schedule-day">неділя</div>
-                </div>
-                <div class="footer__schedule-slot footer__text-slot--last">
-                  <div class="footer__schedule-time">Вихідні:</div>
-                  <div class="footer__schedule-day">понеділок, вівторок</div>
-                </div>
-
-                <div class="footer__schedule-day"> Kaca припиняє роботу за 1 годину до закриття музею
-                </div>
-              </div>
-            </div>
-
-            <div class="footer__contacts">
-              <p class="footer__contscts-title">Контакти:</p>
-              <div class="footer__contacts-content">
-                <p class="footer__contacts-day">вул. M. Грушевського, 6; Київ, 01001</p>
-                <p class="footer__contacts-day">тел. +38 (044) 278-13-57</p>
-                <p class="footer__contacts-day"> факс +38 (044) 278-74-54</p>
-                <p class="footer__contacts-day">e-mail: info@namu.kiev.ua</p>
-              </div>
-            </div>
-          </div>
-
-          <nav class="footer__nav">
-            <ul class="footer__nav-list">
-              <div class="footer__nav-wrapper">
-                <li class="footer__nav-item">
-                  <a href="#gallery" class="footer__nav-link">
-                    Галерея
-                  </a>
-                </li>
-
-                <li class="footer__nav-item">
-                  <a href="#exhibition" class="footer__nav-link">
-                    Виставки та події
-                  </a>
-                </li>
-              </div>
-            </ul>
-            <ul class="footer__nav-list footer__nav-list--second">
-              <div class="footer__nav-wrapper">
-                <li class="footer__nav-item">
-                  <a href="#top" class="footer__nav-link">
-                    Про нас
-                  </a>
-                </li>
-
-                <li class="footer__nav-item">
-                  <a href="#contacts" class="footer__nav-link">
-                    Контакти
-                  </a>
-                </li>
-              </div>
-            </ul>
-          </nav>
-
-          <div class="footer__go-top">
-            <a href="#top" class="footer__go-top-link">↑</a>
-
-          </div>
-
-        </div>
-      </div>
-    </div>-->
   </body>
 </html>
