add section subscription

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap">
   </head>
   <body class="page__body">
     <header class="page__section header">
@@ -84,14 +84,49 @@
                 Підписка
               </a>
             </li>
+          </ul>
 
         </div>
       </div>
     </div>
 
     <main class="main">
+      <section class="page__section events">
 
+      </section>
+
+      <section class="page__section gallery">
+
+      </section>
+
+      <section class="page__section subscription">
+          <div class="container">
+            <h2 class="page__section-title">
+              Підписка
+            </h2>
+
+            <p class="page__section-paragraph">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item_s--1-3 grid__item_m--4-8">
+                <form action="#" method="get">
+                  <input
+                    class="subscription__field form-field"
+                    name="Email"
+                    placeholder="Email"
+                    type="email"
+                    required
+                  >
+                </form>
+              </div>
+            </div>
+          </div>
+      </section>
     </main>
+
+    <footer class="footer"></footer>
 
   </body>
 </html>
