--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   </head>
   <body class="page">
 
+    <a href="#" class="page__to-home">
+    </a>
+
     <header class="header header--margin">
       <div class="container container--pos">
 
@@ -66,7 +69,7 @@
         </div>
         <ul class="nav-list">
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">
+            <a href="#gallery" class="nav-list__link">
             Галерея
             </a>
           </li>
@@ -186,7 +189,35 @@
 
       </section>
 
-      <section class="gallery"></section>
+      <section class="gallery container" id="gallery">
+        <h2 class="page__title--h2 gallery__title">
+          Галерея
+        </h2>
+        <div class="grid grid--desktop gallery__grid">
+          <img
+            class="grid__item-desk--1-4 gallery__img gallery__img--active"
+            src="./images/galery1.png"
+            alt="pic1"
+          >
+          <img
+            class="grid__item-desk--5-12 gallery__img"
+            src="./images/galery2.png"
+            alt="pic2"
+          >
+          <img
+            class="grid__item-desk--1-8 gallery__img"
+            src="./images/galery3.png"
+            alt="pic3"
+          >
+          <img
+            class="grid__item-desk--9-12 gallery__img"
+            src="./images/galery4.png"
+            alt="pic4"
+          >
+        </div>
+
+
+      </section>
 
       <section class="container-outside subscribe-bg" id="subscribe">
         <div class="container grid grid--desktop">
@@ -209,6 +240,7 @@
                 placeholder="E-mail"
               >
               <button
+                id="send"
                 type="submit"
                 class="subscribe__button"
               >
@@ -229,11 +261,13 @@
         </a>
         <div class="footer-link__social">
           <a
+            target="_blank"
             href="https://www.facebook.com/namu.museum/"
             class="footer-link__link footer-link__link--f"
           >
           </a>
           <a
+            target="_blank"
             href="https://www.instagram.com/namu.museum/"
             class="footer-link__link footer-link__link--i"
           >
@@ -306,7 +340,7 @@
       <div class="footer-nav grid__item-tab--2-5 grid__item-desk--8-12">
         <ul class="footer-nav__list">
           <li>
-            <a href="#">
+            <a href="#gallery">
               Галерея
             </a>
           </li>
