--- a/src/index.html
+++ b/src/index.html
@@ -206,13 +206,8 @@
             placeholder="E-mail"
             class="subscribe__form--input"
             >
-            <a href="#">
-              <img 
-              src="./images/Group57.png" 
-              alt="greenButton"
-              class="button--square"
-            >
-            </a>
+            <button class="subscribe__form--button">
+            </button>
           </form>
         </div>
       </section>
