add fix from checklist

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
 
         <div class="event-exhibition event-exhibition--margin container grid grid--desktop">
           <img
-            class="grid__item-tab--1-6 grid__item-desk--1-7 event-exhibition__poster"
+            class="grid__item-tab--1-6 grid__item-desk--1-7 event-exhibition__poster scale"
             src="./images/exhb1.png"
             alt="picture 1"
           >
@@ -138,7 +138,7 @@
 
         <div class="event-exhibition event-exhibition--margin container grid grid--desktop">
           <img
-            class="grid__item-tab--1-6 grid__item-desk--1-7 event-exhibition__poster"
+            class="grid__item-tab--1-6 grid__item-desk--1-7 event-exhibition__poster scale"
             src="./images/exhb2.png"
             alt="picture 1"
           >
@@ -195,22 +195,22 @@
         </h2>
         <div class="grid grid--desktop gallery__grid">
           <img
-            class="grid__item-desk--1-4 gallery__img gallery__img--active"
+            class="grid__item-desk--1-4 gallery__img gallery__img--active scale"
             src="./images/galery1.png"
             alt="pic1"
           >
           <img
-            class="grid__item-desk--5-12 gallery__img"
+            class="grid__item-desk--5-12 gallery__img scale"
             src="./images/galery2.png"
             alt="pic2"
           >
           <img
-            class="grid__item-desk--1-8 gallery__img"
+            class="grid__item-desk--1-8 gallery__img scale"
             src="./images/galery3.png"
             alt="pic3"
           >
           <img
-            class="grid__item-desk--9-12 gallery__img"
+            class="grid__item-desk--9-12 gallery__img scale"
             src="./images/galery4.png"
             alt="pic4"
           >
@@ -231,19 +231,16 @@
               </div>
             </div>
 
-            <form class="subscribe__form">
+            <form class="subscribe__form" action="#">
               <input
                 class="subscribe__input"
                 type="email"
                 name="email"
                 id="email"
                 placeholder="E-mail"
+                required
               >
-              <button
-                id="send"
-                type="submit"
-                class="subscribe__button"
-              >
+              <button id="send" class="subscribe__button">
                 <span class="subscribe__arrow"></span>
               </button>
             </form>
@@ -312,25 +309,29 @@
         </h4>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/JUnrcEacNQhrZWS96">
+            <a
+              href="https://goo.gl/maps/JUnrcEacNQhrZWS96"
+              class="footer-contact__link"
+              target="_blank"
+            >
               вул. М. Грушевського, 6; Київ, <br> 01001
             </a>
           </li>
 
           <li>
-            <a href="tel:+38 (044) 278-13-57">
-              тел. +38 (044) 278-13-57
+            <a href="tel:+38 (044) 278-13-57" class="footer-contact__link">
+              тел.: <span class="footer-contact__wrap">+38 (044) 278-13-57</span>
             </a>
           </li>
 
           <li>
-            <a href="tel:+38 (044) 278-74-54">
-              факс +38 (044) 278-74-54
+            <a href="tel:+38 (044) 278-74-54" class="footer-contact__link">
+              факс: <span class="footer-contact__wrap">+38 (044) 278-74-54</span>
             </a>
           </li>
 
           <li>
-            <a href="mailto:info@namu.kiev.ua">
+            <a href="mailto:info@namu.kiev.ua" class="footer-contact__link">
               e-mail: info@namu.kiev.ua
             </a>
           </li>
