much better footer

--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,7 @@
             </div>
           </div>
         </div>
-        <div class="grid__item grid__item--5-6">
+        <div class="grid__item grid__item--5-6 border">
           <div class="footer__schedule-contacts">
             <h3>Контакти:</h3>
             <div>
@@ -370,7 +370,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <!--  <div>
           <img
             src="./images/footer_line_hor.png"
             alt="line"
@@ -389,28 +389,30 @@
             alt="go_to_the_top"
             class="footer__return">
           </a>
-        </div>
+        </div> -->
         <div class="grid__item grid__item--8-10">
-          <div class="footer__link-container">
-            <div>
-              <a href="#gallery" class="footer__link">
-                Галерея
-              </a>
+          <div class="footer__link--obercontainer">
+            <div class="footer__link-container">
+              <div>
+                <a href="#gallery" class="footer__link">
+                  Галерея
+                </a>
+              </div>
+              <div>
+                <a href="#exhibition" class="footer__link footer__link-bottom">
+                  Виставки та події
+                </a>
+              </div>
             </div>
-            <div>
-              <a href="#exhibition" class="footer__link">
-                Виставки та події
-              </a>
-            </div>
-          </div>
-          <div class="footer__link-container">
-            <div>
-              <a href="#" class="footer__link">
-                Про Hac
-              </a>
-            </div>
-            <div class="footer__link">
-              Контакти
+            <div class="footer__link-container">
+              <div>
+                <a href="#" class="footer__link">
+                  Про Hac
+                </a>
+              </div>
+              <div class="footer__link footer__link-bottom">
+                Контакти
+              </div>
             </div>
           </div>
         </div>
