--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       href="/favicon-16x16.png"
     >
     <link rel="manifest" href="/site.webmanifest">
-    <script src="./scripts/main.js"></script>
+    <script defer src="main.js"></script>
   </head>
   <body class="page__content">
     <header id="header" class="header">
@@ -229,9 +229,9 @@
           </h1>
           <div class="info__emblems-logos">
             <a
-            href="https://www.facebook.com/namu.museum/"
-            target="_blank"
-            class="info__emblems-logos-link"
+              href="https://www.facebook.com/namu.museum/"
+              target="_blank"
+              class="info__emblems-logos-link"
             >
               <img
                 src="./images/Facebook.png"
@@ -284,17 +284,17 @@
               </a>
               <br>
               <a
-              class="info__description-contacts-link"
-              href="tel:+38044781357"
-              target="_blank"
+                class="info__description-contacts-link"
+                href="tel:+38044781357"
+                target="_blank"
               >
                 тел. +38 (044) 278-13-57
               </a>
               <br>
               <a
-              class="info__description-contacts-link"
-              href="fax:+380442787454"
-              target="_blank"
+                class="info__description-contacts-link"
+                href="fax:+380442787454"
+                target="_blank"
               >
                 факс +38 (044) 278-74-54
               </a>
@@ -328,12 +328,5 @@
         </div>
       </footer>
     </main>
-    <script>
-      const form = document.getElementById('form');
-      form.addEventListener('submit', (event) => {
-        event.preventDefault();
-        form.reset();
-      });
-    </script>
   </body>
 </html>
