--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,17 @@
     <div class="header">
       <a href="#header__nav" class="header__menu"></a>
       <a href="#" class="header__logo"></a>
-      <div class="header__nav" id="header__nav">
+      <div class="header__nav container" id="header__nav">
+        <a href="#" class="header__link header__link--logo"></a>
         <a href="#museum-of-art" class="header__link">Художній музей</a>
         <a href="#current-events" class="header__link">Актуальні події</a>
         <a href="#gallary" class="header__link">Галерея</a>
         <a href="#subscription" class="header__link">Підписка</a>
-        <a href="#footer" class="header__link">Інфо</a>
+        <a href="#footer" class="header__link">Інфо</a> <br>
+
+        <a class="footer__contact footer__contact--header" href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+        <a class="footer__contact footer__contact--header" href="tel:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+        <a class="footer__contact footer__contact--header" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
       </div>
     </div>
 
@@ -164,12 +169,17 @@
         </div>
         <div class="footer-grid__item--2 grid__itemT--4-5 grid__itemD--5-6">
           <div class="footer__subtitle">Контакти:</div>
-          <div class="footer__text">
-            вул. М. Грушевського, 6; Київ, 01001 <br>
-            тел. +38 (044) 278-13-57 <br>
-            факс +38 (044) 278-74-54 <br>
-            e-mail: info@namu.kiev.ua
-          </div>
+          <a
+            class="footer__contact"
+            href="https://goo.gl/maps/jDeWaVDnFoxZcX7F8"
+            target="_blank"
+          >вул. М. Грушевського, 6; Київ, 01001</a>
+          <a
+            class="footer__contact"
+            href="tel:+38 (044) 278-13-57"
+          >тел. +38 (044) 278-13-57</a>
+          <a class="footer__contact" href="tel:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+          <a class="footer__contact" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
           <div class="footer__up">
             <a href="#" class="footer__up-up"></a>
           </div>
