--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
           </div>
         </div>
 
+
+
         <div class="header__events">
           <div class="header__events-line"></div>
           <p class="header__events-text">події</p>
@@ -188,18 +190,16 @@
         </div>
         <div class="events__item events__item--bottom">
           <div class="event__bottom-image">
-            <div class="container">
-              <div class="event__info event__info--bottom">
-                <div class="event__box event__box--bottom">
-                  <p class="event__type">лекція</p>
-                  <p class="event__date">26/08/2019 - 11:00</p>
-                </div>
-                <h3 class="event__title">
-                  <a hhref="#" class="event__link">
-                    Від класицизму до романтизму
-                  </a>
-                </h3>
+            <div class="event__info event__info--bottom">
+              <div class="event__box event__box--bottom">
+                <p class="event__type">лекція</p>
+                <p class="event__date">26/08/2019 - 11:00</p>
               </div>
+              <h3 class="event__title">
+                <a hhref="#" class="event__link">
+                  Від класицизму до романтизму
+                </a>
+              </h3>
             </div>
           </div>
         </div>
@@ -208,8 +208,8 @@
       </section>
 
 
-      <section class="page__gallery gallery" id="Gallery">
-        <div class="container">
+      <section class="page__gallery gallery container" id="Gallery">
+        <div class="gallery__content">
           <p class="gallery__title">Галерея</p>
 
           <div class="gallery__first">
@@ -303,19 +303,21 @@
               placeholder="E-mail"
               required
             >
-            <button class="subscription__icon" href="#email">
+            <button
+              class="subscription__icon"
+              href="#email"
+              type="submit"
+              >
               <img
                 class="subscription__icon-pic"
                 src="/images/icons/go.svg"
                 alt="go"
               >
             </button>
-            <div id="output-box" class="subscription_att-warning"></div>
           </form>
         </div>
       </div>
     </div>
-
 
     <footer>
       <div class="footer">
