--- a/src/index.html
+++ b/src/index.html
@@ -101,19 +101,20 @@
       <section
         class="page__section
         page__section-exhibition">
-        <div class="grid">
-          <div class="grid__item grid__item--1-4">
+        <div>
+          <div>
             <h2 class="page__section-title" id="exhibition">
               Актуальні
               <br>
               події
             </h2>
           </div>
-          <div class="grid__item grid__item--1-7 page__section-painting-container">
-            <img src="./images/painting1.png" alt="painting_nature"
-              class="page__section-painting">
-          </div>
-          <div class="grid__item grid__item--9-12">
+          <div class="page__section--content">
+            <div class="page__section-painting-container">
+              <img src="./images/painting1.png" alt="painting_nature"
+                class="page__section-painting">
+            </div>
+
             <div class="page__section--container">
               <div class="page__section-description">
                 ВИСТАВКА
@@ -129,15 +130,15 @@
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
               </div>
             </div>
-          </div>
 
-          <div class="grid__item grid__item--1-7 page__section-painting-container">
-            <img
-              src="./images/painting2.png"
-              alt="painting_girl"
-              class="page__section-painting">
-          </div>
-          <div class="grid__item grid__item--9-12">
+
+            <div class="page__section-painting-container">
+              <img
+                src="./images/painting2.png"
+                alt="painting_girl"
+                class="page__section-painting">
+            </div>
+
             <div class="page__section--container">
               <div class="page__section-description">
                 ВИСТАВКА
@@ -153,6 +154,7 @@
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
               </div>
             </div>
+
           </div>
         </div>
       </section>
@@ -370,26 +372,6 @@
             </div>
           </div>
         </div>
-        <!--  <div>
-          <img
-            src="./images/footer_line_hor.png"
-            alt="line"
-            class="footer__line-desktop">
-        </div>
-        <div>
-          <img
-            src="./images/footer_line_ver.png"
-            alt="line"
-            class="footer__line-mobile">
-        </div>
-        <div>
-          <a href="#">
-            <img
-            src="./images/Ellipse.png"
-            alt="go_to_the_top"
-            class="footer__return">
-          </a>
-        </div> -->
         <div class="grid__item grid__item--8-10">
           <div class="footer__link--obercontainer">
             <div class="footer__link-container">
