--- a/src/index.html
+++ b/src/index.html
@@ -63,19 +63,19 @@
           <ul class="menu__list">
             <li class="menu__item">
               <a href="#" class="menu__link">
-                Художній Музей
+                ГАлерея
               </a>
             </li>
 
             <li class="menu__item">
               <a href="#" class="menu__link">
-                Актуальні події
+                Виставки та події
               </a>
             </li>
 
             <li class="menu__item">
               <a href="#" class="menu__link">
-                Галерея
+                Про Нас
               </a>
             </li>
 
@@ -100,33 +100,164 @@
       </section>
 
       <section class="page__section subscription">
-          <div class="container">
-            <h2 class="page__section-title">
-              Підписка
-            </h2>
+        <div class="container">
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item_s--2-5 grid__item_m--5-8">
+              <h2 class="page__section-title">
+                Підписка
+              </h2>
+            </div>
 
-            <p class="page__section-paragraph">
-              Бути в курсі всіх актуальних подій та останніх новин.
-            </p>
+            <div class="grid__item grid__item_s--2-5 grid__item_m--4-9">
+              <p class="page__section-paragraph">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+            </div>
 
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item_s--1-3 grid__item_m--4-8">
-                <form action="#" method="get">
-                  <input
-                    class="subscription__field form-field"
-                    name="Email"
-                    placeholder="Email"
-                    type="email"
-                    required
-                  >
-                </form>
-              </div>
+            <div class="grid__item grid__item_s--2-4 grid__item_m--4-8">
+              <form action="#" method="get">
+                <input
+                  class="subscription__field form-field"
+                  name="Email"
+                  placeholder="E-mail"
+                  type="email"
+                  required
+                >
+              </form>
             </div>
           </div>
+        </div>
       </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid grid--desktop">
+          <div class="grid__item grid__item_s--1-1 grid__item_m--1-1">
+            <a href="#" class="footer__logo logo">
+              <img
+                class="logo__image"
+                src="images/logo.svg"
+                alt="NAMU"
+              >
+            </a>
+
+            <div class="footer__social">
+              <a
+                class="icon icon--facebook"
+                href="#menu"
+              ></a>
+
+              <a
+                class="icon icon--instagram"
+                href="#menu"
+              ></a>
+            </div>
+          </div>
+
+
+          <div class="grid__item grid__item_s--2-3 grid__item_m--3-4">
+            <h5 class="footer__subtitle">
+              Графік роботи
+            </h5>
+
+            <p class="footer__txt">
+              <b>12:00 — 20:00</b> середа<br>
+              <b>12:00 — 20:00</b> четвер<br>
+              <b>12:00 — 20:00</b> п’ятниця<br>
+              <b>11:00 — 19:00</b> субота<br>
+              <b>11:00 — 19:00</b> неділя<br>
+              <br><b>Вихідні:</b> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="grid__item grid__item_s--4-5 grid__item_m--5-6">
+            <h5 class="footer__subtitle">
+              Контакти:
+            </h5>
+
+            <p class="footer__txt">
+              <a
+                class="footer__link"
+                href="https://goo.gl/maps/qvpFPRNerEHnQooo7"
+                alt="Адреса"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+            </p>
+
+            <p class="footer__txt">
+              <a
+                class="footer__link"
+                href="tel: +380442781357"
+                alt="Тлефон"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+            </p>
+
+            <p class="footer__txt">
+              <a
+                class="footer__link"
+                href="tel: +380442787454"
+                alt="Факс"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+            </p>
+
+            <p class="footer__txt">
+              <a
+               class="footer__link"
+                href="mailto: info@namu.kiev.ua"
+                alt="Електронна пошта"
+                target="_blank"
+              >
+                e-mail: info@namu.kiev.ua</a>
+            </p>
+
+          </div>
+
+          <div class="grid__item grid__item_s--2-5 grid__item_m--7-7">
+            <div class="footer__line"></div>
+          </div>
+
+          <div class="grid__item grid__item_s--2-3 grid__item_m--8-9">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="footer__item">
+                <a href="#" class="footer__link">
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="grid__item grid__item_s--4-5 grid__item_m--10-11">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">
+                  Про нас
+                </a>
+              </li>
+
+              <li class="footer__item">
+                <a href="#" class="footer__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
