--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
     <script
       type="module"
@@ -42,32 +45,61 @@
     <nav class="menu" id="menu">
       <div class="menu--container">
         <div class="menu__content">
-          <a href="#">
-            <img
-              src="./images/NA MU.png"
-              alt="logo"
-              class="menu__logo">
-          </a>
           <a href="#" class="menu__close">
             X
           </a>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__item-a">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#exhibition" class="menu__item-a">
+                Виставки та
+                <br>
+                події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#footer" class="menu__item-a">Про Hac</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__item-a">
+                Контакти
+              </a>
+            </li>
+          </ul>
         </div>
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#exhibition" class="menu__item-a">Виставки та події</a>
-          </li>
-          <li class="menu__item">
-            <a href="#gallery" class="menu__item-a">Галерея</a>
-          </li>
-          <li class="menu__item">
-            <a href="#lecture" class="menu__item-a">Про Hac</a>
-          </li>
-          <li class="menu__item">
-            <a href="#footer" class="menu__item-a">
-              Контакти
-            </a>
-          </li>
-        </ul>
+        <div class="menu__schedule">
+          <div class="menu__schedule--time">
+            <div class="menu__schedule-title">Графік роботи</div>
+            <div class="menu__schedule-container">
+              <div class="menu__schedule-hours">
+                <div>
+                  <strong>12:00 — 20:00</strong> середа
+                </div>
+                <div>
+                  <strong>12:00 — 20:00</strong> четвер
+                </div>
+                <div>
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </div>
+                <div>
+                  <strong>11:00 — 19:00</strong> субота
+                </div>
+                <div>
+                  <strong>11:00 — 19:00</strong> неділя
+                </div>
+              </div>
+              <div  class="menu__schedule-off">
+                <span class="bold">Вихідні:</span> понеділок, вівторок
+                <br>
+                Kaca припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </nav>
 
@@ -84,7 +116,7 @@
               <div class="hero__button--item">
                 кивтки
               </div>
-              <a href="#" class="hero__button--search">
+              <a href="#exhibition" class="hero__button--search">
                 >
               </a>
             </div>
@@ -104,9 +136,7 @@
         <div>
           <div>
             <h2 class="page__section-title" id="exhibition">
-              Актуальні
-              <br>
-              події
+              Актуальні події
             </h2>
           </div>
           <div class="page__section--content">
@@ -116,15 +146,20 @@
             </div>
 
             <div class="page__section--container">
-              <div class="page__section-description">
-                ВИСТАВКА
-              </div>
-              <div class="page__section-date">
-                26.08-29.11.2019
+              <div class="page__section-announcement--top top">
+                <div class="page__section-description">
+                  ВИСТАВКА
+                </div>
+                <div class="page__section-date">
+                  26.08-29.11.2019
+                </div>
               </div>
               <div class="page__section-name">
                 Йду i повертаюсь
-                <img src="./images/orange.png" alt="ornge_square">
+                <img
+                  src="./images/orange.png"
+                  alt="ornge_square"
+                  class="page__section--orange">
               </div>
               <div class="page__section-content">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -140,15 +175,20 @@
             </div>
 
             <div class="page__section--container">
-              <div class="page__section-description">
-                ВИСТАВКА
-              </div>
-              <div class="page__section-date">
-                26.08-29.11.2019
+              <div class="page__section-announcement--top top">
+                <div class="page__section-description">
+                  ВИСТАВКА
+                </div>
+                <div class="page__section-date">
+                  26.08-29.11.2019
+                </div>
               </div>
               <div class="page__section-name">
                 I спогади i мрії
-                <img src="./images/orange.png" alt="ornge_square">
+                <img
+                  src="./images/orange.png"
+                  alt="ornge_square"
+                  class="page__section--orange">
               </div>
               <div class="page__section-content">
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
@@ -160,20 +200,18 @@
       </section>
 
       <section class="page__section page__section-lection">
-        <div class="grid">
-          <div class="grid__item grid__item--4-9">
-            <div class="page__section-announcement">
-              <div class="page__section-description" id="lectute">
-                ЛЕКЦІЯ
-              </div>
-              <div class="page__section-date">26/08/2019 - 11:00</div>
-              <h2  class="page__section-name">
-                Від класицизму до
-                <br>
-                романтизму
-              </h2>
+        <div class="page__section-announcement">
+          <div class="page__section-announcement--top">
+            <div class="page__section-description" id="lectute">
+              ЛЕКЦІЯ
             </div>
+            <div class="page__section-date">26/08/2019 - 11:00</div>
           </div>
+          <h2  class="page__section-name">
+            Від класицизму до
+            <br>
+            романтизму
+          </h2>
         </div>
       </section>
 
@@ -277,127 +315,132 @@
       </section>
     </main>
     <footer class="footer" id="#footer">
-      <div class="grid">
-        <div class="grid__item
-          grid__item--desktop-1-1
-          grid__item--1-12
-          footer__logo-container">
-          <div class="footer__logo">
-            <a href="#">
+      <div class="footer__logo-container">
+        <div class="footer__logo">
+          <a href="#">
+            <img
+            src="./images/logo_footer.png"
+            alt="logo"
+            class="footer__logo-pic">
+          </a>
+          <div class="footer__logo--links">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              class="footer__logo-link"
+              target="_blank">
               <img
-              src="./images/logo_footer.png"
-              alt="logo"
-              class="footer__logo-pic">
+                src="./images/Facebook.png"
+                alt="facebook_link">
             </a>
-            <div class="footer__logo--links">
-              <a
-                href="https://www.facebook.com/namu.museum/"
-                class="footer__logo-link"
-                target="_blank">
-                <img
-                  src="./images/Facebook.png"
-                  alt="facebook_link"
-                  >
-              </a>
-              <a href="https://www.instagram.com/namu.museum/" target="_blank">
-                <img
-                  src="./images/insta.png"
-                  alt="instagram_link">
-              </a>
-            </div>
+            <a href="https://www.instagram.com/namu.museum/" target="_blank">
+              <img
+                src="./images/insta.png"
+                alt="instagram_link">
+            </a>
           </div>
         </div>
-        <div class="grid__item grid__item--3-4">
-          <div class="footer_schedule">
-            <div class="footer_schedule--time">
-              <h3>Графік роботи</h3>
-              <div>
-                <div class="footer__schedule-hours">
-                  12:00 — 20:00
-                </div>
-                <div>
-                  середа
-                </div>
-                <div class="footer__schedule-hours">
-                  12:00 — 20:00
-                </div>
-                <div>
-                  четвер
-                </div>
-                <div class="footer__schedule-hours">
-                  12:00 — 20:00
-                </div>
-                <div>
-                  п’ятниця
-                </div>
-                <div class="footer__schedule-hours">
-                  11:00 — 19:00
-                </div>
-                <div>
-                  субота
-                </div>
-                <div class="footer__schedule-hours">
-                  11:00 — 19:00
-                </div>
-                <div>
-                  неділя
-                </div>
-                <div  class="footer__schedule-off">
-                  <span class="bold">Вихідні:</span> понеділок, вівторок
-                  <br>
-                  Kaca припиняє роботу за 1 годину
-                  <br>
-                  до закриття музею
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="grid__item grid__item--5-6 border">
-          <div class="footer__schedule-contacts">
-            <h3>Контакти:</h3>
+      </div>
+      <div class="footer__schedule-container">
+        <div class="footer_schedule">
+          <div class="footer_schedule--time">
+            <h3>Графік роботи</h3>
             <div>
-              <a href="https://goo.gl/maps/7nr8PqBr3HogmNBo8" class="footer__schedule-link">
-                вул. M. Грушевського, 6; Київ, 01001
-              </a>
-              <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
-                тел. +38 (044) 278-13-57
-              </a>
-              <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
-                факс +38 (044) 278-74-54
-              </a>
-              <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
-                e-mail: info@namu.kiev.ua
-              </a>
+              <div class="footer__schedule-hours">
+                12:00 — 20:00
+              </div>
+              <div>
+                середа
+              </div>
+              <div class="footer__schedule-hours">
+                12:00 — 20:00
+              </div>
+              <div>
+                четвер
+              </div>
+              <div class="footer__schedule-hours">
+                12:00 — 20:00
+              </div>
+              <div>
+                п’ятниця
+              </div>
+              <div class="footer__schedule-hours">
+                11:00 — 19:00
+              </div>
+              <div>
+                субота
+              </div>
+              <div class="footer__schedule-hours">
+                11:00 — 19:00
+              </div>
+              <div>
+                неділя
+              </div>
+              <div  class="footer__schedule-off">
+                <span class="bold">Вихідні:</span> понеділок, вівторок
+                <br>
+                Kaca припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </div>
             </div>
           </div>
         </div>
-        <div class="grid__item grid__item--8-10">
-          <div class="footer__link--obercontainer">
-            <div class="footer__link-container">
-              <div>
-                <a href="#gallery" class="footer__link">
-                  Галерея
-                </a>
-              </div>
-              <div>
-                <a href="#exhibition" class="footer__link footer__link-bottom">
-                  Виставки та події
-                </a>
-              </div>
-            </div>
-            <div class="footer__link-container">
-              <div>
-                <a href="#" class="footer__link">
-                  Про Hac
-                </a>
-              </div>
-              <div class="footer__link footer__link-bottom">
-                Контакти
-              </div>
-            </div>
+        <div class="footer__schedule-contacts" id="#contacts">
+          <h3>Контакти:</h3>
+          <div>
+            <a
+              href="https://goo.gl/maps/7nr8PqBr3HogmNBo8"
+              class="footer__schedule-link"
+              target="_blank">
+              вул. M. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
+              e-mail: info@namu.kiev.ua
+            </a>
           </div>
         </div>
+        <div class="footer__toTheTop">
+          <a href="#">
+            <img
+          src="./images/arrow.png"
+          alt="toTheTop"
+          class="footer__toTheTop--img">
+          </a>
+        </div>
+      </div>
+      <div class="footer__link--obercontainer">
+        <div class="footer__link-container">
+          <div>
+            <a href="#gallery" class="footer__link">
+              Галерея
+            </a>
+          </div>
+          <div>
+            <a href="#exhibition" class="footer__link">
+              Виставки та події
+            </a>
+          </div>
+        </div>
+        <div class="footer__link-container">
+          <div>
+            <a href="#" class="footer__link">
+              Про Hac
+            </a>
+          </div>
+          <div class="footer__link">
+            Контакти
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <div>Designed by Zhyriada Marina</div>
+        <div>Copyright © 2019. All Rights Reserved.</div>
       </div>
     </footer>
   </body>
