--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,11 @@
               grid__item--on768-2-5
               grid__item--on1280-4-9
             ">
-              <form class="form" action="#">
+              <form
+                class="form"
+                action="#"
+                id="footer-contact-form"
+              >
                 <input
                   class="form__field"
                   name="email"
