--- a/src/index.html
+++ b/src/index.html
@@ -92,11 +92,90 @@
 
     <main class="main">
       <section class="page__section events">
+        <div class="container">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
 
+          <div class="events">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item_s--1-6 grid__item_m--1-7">
+                <div class="events__photo-container">
+                  <img
+                    src="images/events/event1.png"
+                    alt="event 1"
+                    class="events__photo"
+                  >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item_s--1-6 grid__item_m--9-12">
+               <div class="events__info">
+                <div class="events__date">
+                  <h3 class="events__date-name">
+                    ВИСТАВКА 26.08-29.11.2019
+                  </h3>
+                </div>
+
+
+                <h4 class="events__subtitle">
+                  Йду і повертаюсь
+
+                </h4>
+
+                <p class="events__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+               </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="events">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item_s--1-6 grid__item_m--1-7">
+                <div class="events__photo-container">
+                  <img
+                    src="images/events/event2.png"
+                    alt="event 2"
+                    class="events__photo"
+                  >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item_s--1-6 grid__item_m--9-12">
+               <div class="events__info">
+                <div class="events__date">
+                  <h3 class="events__date-name">
+                    ВИСТАВКА 26.08-29.11.2019
+                  </h3>
+                </div>
+
+
+                <h4 class="events__subtitle">
+                  І спогади і мрії
+
+                </h4>
+
+                <p class="events__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+               </div>
+              </div>
+            </div>
+          </div>
+
+          </div>
+        </div>
       </section>
 
       <section class="page__section gallery">
-
+        <div class="container">
+          <h2 class="events__title">
+            Галерея
+          </h2>
+        </div>
       </section>
 
       <section class="page__section subscription">
@@ -145,12 +224,12 @@
             <div class="footer__social">
               <a
                 class="icon icon--facebook"
-                href="#menu"
+                href="#"
               ></a>
 
               <a
                 class="icon icon--instagram"
-                href="#menu"
+                href="#"
               ></a>
             </div>
           </div>
@@ -162,12 +241,12 @@
             </h5>
 
             <p class="footer__txt">
-              <b>12:00 — 20:00</b> середа<br>
-              <b>12:00 — 20:00</b> четвер<br>
-              <b>12:00 — 20:00</b> п’ятниця<br>
-              <b>11:00 — 19:00</b> субота<br>
-              <b>11:00 — 19:00</b> неділя<br>
-              <br><b>Вихідні:</b> понеділок, вівторок<br>
+              12:00 — 20:00 середа<br>
+              12:00 — 20:00 четвер<br>
+              12:00 — 20:00 п’ятниця<br>
+              11:00 — 19:00 субота<br>
+              11:00 — 19:00 неділя<br>
+              <br>Вихідні: понеділок, вівторок<br>
               Каса припиняє роботу за 1 годину до закриття музею
             </p>
           </div>
@@ -215,7 +294,8 @@
                 alt="Електронна пошта"
                 target="_blank"
               >
-                e-mail: info@namu.kiev.ua</a>
+                e-mail: info@namu.kiev.ua
+              </a>
             </p>
 
           </div>
