--- a/src/index.html
+++ b/src/index.html
@@ -110,23 +110,22 @@
               </div>
 
               <div class="grid__item grid__item_s--1-6 grid__item_m--9-12">
-               <div class="events__info">
-                <div class="events__date">
-                  <h3 class="events__date-name">
-                    ВИСТАВКА 26.08-29.11.2019
-                  </h3>
+                <div class="events__info">
+                  <div class="events__date">
+                    <h3 class="events__date-name">
+                      ВИСТАВКА 26.08-29.11.2019
+                    </h3>
+                  </div>
+
+
+                  <h4 class="events__subtitle">
+                    Йду і повертаюсь
+                  </h4>
+
+                  <p class="events__text">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
                 </div>
-
-
-                <h4 class="events__subtitle">
-                  Йду і повертаюсь
-
-                </h4>
-
-                <p class="events__text">
-                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                </p>
-               </div>
               </div>
             </div>
           </div>
@@ -145,28 +144,27 @@
               </div>
 
               <div class="grid__item grid__item_s--1-6 grid__item_m--9-12">
-               <div class="events__info">
-                <div class="events__date">
-                  <h3 class="events__date-name">
-                    ВИСТАВКА 26.08-29.11.2019
-                  </h3>
+                <div class="events__info">
+                  <div class="events__date">
+                    <h3 class="events__date-name">
+                      ВИСТАВКА 26.08-29.11.2019
+                    </h3>
+                  </div>
+
+
+                  <h4 class="events__subtitle">
+                    І спогади і мрії
+
+                  </h4>
+
+                  <p class="events__text">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
                 </div>
-
-
-                <h4 class="events__subtitle">
-                  І спогади і мрії
-
-                </h4>
-
-                <p class="events__text">
-                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                </p>
-               </div>
               </div>
             </div>
           </div>
 
-          </div>
         </div>
       </section>
 
@@ -175,6 +173,58 @@
           <h2 class="events__title">
             Галерея
           </h2>
+
+          <div class="gallery__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item grid__item_s--1-3 grid__item_m--1-4">
+                  <div class="place__photo-container">
+                    <img
+                      src="images/galery/galery1.png"
+                      alt="galery 1"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+                <div class="grid__item grid__item_s--4-6 grid__item_m--5-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="images/galery/galery2.png"
+                      alt="galery 2"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="gallery__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item grid__item_s--1-3 grid__item_m--1-8">
+                  <div class="place__photo-container">
+                    <img
+                      src="images/galery/galery3.png"
+                      alt="galery 3"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+                <div class="grid__item grid__item_s--4-6 grid__item_m--9-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="images/galery/galery4.png"
+                      alt="galery 4"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
       </section>
 
