--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,24 @@
             </div>
           </div>
 
+          <div class="events">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item_s--2-5 grid__item_m--4-9">
+                <div class="events__info">
+                  <div class="events__date">
+                    <h3 class="events__date-name">
+                      ЛЕКЦІЯ 26/08/2019 - 11:00
+                    </h3>
+                  </div>
+
+                  <h4 class="events__subtitle">
+                    Від класицизму до романтизму
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
 
