--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,10 @@
             <h1 class="museum-of-art__h1">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
             <div class="museum-of-art__container2">
               <a href="#current-events" class="museum-of-art__events">ПОДІЇ</a>
-              <div class="museum-of-art__tickets">
+              <a href="#current-events" class="museum-of-art__tickets">
                 <div class="museum-of-art__tickets--text">КВИТКИ</div>
-                <a href="#current-events" class="museum-of-art__tickets--arrow"></a>
-              </div>
+                <div class="museum-of-art__tickets--arrow"></div>
+              </a>
             </div>
           </div>
         </div>
