--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
   <body>
-    <header class="header header--desktop">
+    <header class="header">
       <div class="container">
 
         <div class="header__content">
@@ -33,7 +33,10 @@
           </a>
           <div class="header__logo">
             <a href="#">
-              <img src="./images/NA MU.png" alt="logo">
+              <img
+                src="./images/NA MU.png"
+                alt="logo"
+                class="logo-pic">
             </a>
           </div>
         </div>
